k8s-bootstrap/resources/kubernetes/jenkins-v2.361.4-lts-alpine.yaml
# ----------------------------------------------------------------------------------------------------------------------------------------------------
# @description: Jenkins Deployment via Kubernetes Template Engines.
# @see {@link https://github1s.com/marcel-dempers/docker-development-youtube-series/blob/HEAD/jenkins/jenkins.deployment.yaml}.
# ----------------------------------------------------------------------------------------------------------------------------------------------------
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-system

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins-system
  labels:
    app: jenkins
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
      app.kubernetes.io/name: jenkins
      app.kubernetes.io/instance: jenkins
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: jenkins
        app.kubernetes.io/name: jenkins
        app.kubernetes.io/instance: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.361.4-lts-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 50000
              protocol: TCP
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins
      restartPolicy: Always
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
        - name: jenkins
          persistentVolumeClaim:
            claimName: jenkins

---
# Source: portainer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins-system
  labels:
    io.portainer.kubernetes.application.stack: jenkins
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/version: "jenkins-v2.361.4-lts-alpine"
spec:
  type: ClusterIP
  ports:
    - name: ui
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: slave
      port: 50000
      protocol: TCP
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: jenkins
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins

#  ---
#  apiVersion: cert-manager.io/v1
#  kind: Certificate
#  metadata:
#    name: jenkins
#    # @describe: `kubectl describe certificate --namespace jenkins-system`.
#    # @describe: `kubectl get secrets --namespace jenkins-system`.
#    namespace: jenkins-system
#  spec:
#    dnsNames:
#      - jenkins.e8s.io
#    secretName: jenkins-tls
#    issuerRef:
#      name: letsencrypt-production
#      kind: ClusterIssuer

# ----------------------------------------------------------------------------------------------------------------------------------------------------
# @description: Deploying multiple Ingress controllers will result in all controllers simultaneously racing to update Ingress status in confusing ways.
# @see {@link https://kubernetes.github.io/ingress-nginx/user-guide/multiple-ingress/}.
# ----------------------------------------------------------------------------------------------------------------------------------------------------
# @solution: Declare explicit IngressClasses to fix this problem.
# ----------------------------------------------------------------------------------------------------------------------------------------------------
# * Using ${annotation} [kubernetes.io/ingress.class]
# * Using ${properties} [ingress.spec.ingressClassName]
# ----------------------------------------------------------------------------------------------------------------------------------------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins-system
  # --------------------------------------------------------------------------------------------------------------------------------------------------
  # @description: Ingress Rules: Wildcard & Specific Sub-Domain.
  # @see {@link https://stackoverflow.com/questions/52328483/kubernetes-ingress-rules-how-to-use-wildcard-and-specific-subdomain-together}.
  # --------------------------------------------------------------------------------------------------------------------------------------------------
  annotations:
    kubernetes.io/tls-acme: "true"
    # ------------------------------------------------------------------------------------------------------------------------------------------------
    # @deprecated: Deprecated from Kubernetes v1.18+.
    # @see {@link https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/}.
    # ------------------------------------------------------------------------------------------------------------------------------------------------
    # kubernetes.io/ingress.class: nginx
    # ------------------------------------------------------------------------------------------------------------------------------------------------
    ingress.kubernetes.io/class-name: nginx
    # ------------------------------------------------------------------------------------------------------------------------------------------------
    # @deprecated: {@resource: [nginx.ingress.kubernetes.io/add-base-url]} from NGINX Ingress Controller.
    # @see {@link https://github.com/kubernetes/ingress-nginx/issues/3770#issuecomment-464449348}.
    # ------------------------------------------------------------------------------------------------------------------------------------------------
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  # --------------------------------------------------------------------------------------------------------------------------------------------------
  # @see {@link https://stackoverflow.com/questions/72932892/class-name-shows-none-for-ingress-object-in-local-kubernetes}.
  # @see {@link https://kubernetes.io/docs/concepts/services-networking/ingress/#deprecated-annotation}.
  # --------------------------------------------------------------------------------------------------------------------------------------------------
  ingressClassName: nginx # Display [<CLASS>:nginx]
  tls:
    - hosts:
        - jenkins.e8s.io
      secretName: wildcard-jenkins-tls
    - hosts:
        - dashboard.jenkins.e8s.io
      secretName: wildcard-jenkins-tls
  rules:
    - host: jenkins.e8s.io
      http:
        paths:
          # ------------------------------------------------------------------------------------------------------------------------------------------
          # @description: In case ${path} differ from ${rewrite-target}. All the following JS, CSS resources would have not been served correctly.
          # @see {@link https://github.com/kubernetes/ingress-nginx/issues/3770#issuecomment-464449348}.
          # @see {@link https://stackoverflow.com/questions/5462897/url-rewriting-broke-link-to-css}.
          # @see {@link https://github.com/kubernetes/ingress-nginx/issues/333}.
          # ------------------------------------------------------------------------------------------------------------------------------------------
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
    - host: dashboard.jenkins.e8s.io
      http:
        paths:
          # ------------------------------------------------------------------------------------------------------------------------------------------
          # @description: In case ${path} differ from ${rewrite-target}. All the following JS, CSS resources would have not been served correctly.
          # @see {@link https://github.com/kubernetes/ingress-nginx/issues/3770#issuecomment-464449348}.
          # @see {@link https://stackoverflow.com/questions/5462897/url-rewriting-broke-link-to-css}.
          # @see {@link https://github.com/kubernetes/ingress-nginx/issues/333}.
          # ------------------------------------------------------------------------------------------------------------------------------------------
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
