k8s-bootstrap/resources/kubernetes/mongodb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  # [ALTERNATIVE COMMAND] > kubectl create namespace [NAMESPACE]
  name: mongodb-namespace
  # [ALTERNATIVE COMMAND] > kubectl apply --filename *.yaml
  labels:
    name: mongodb-namespace

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  # [ALTERNATIVE COMMAND] > kubectl apply --filename *.yaml --namespace=mongodb-namespace
  namespace: mongodb-namespace
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4.13
          ports:
            # @description: Database Application Exposed via Custom HTTP Port::27017
            - containerPort: 27017
          volumeMounts:
            - name: database
              mountPath: /data/db/
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: mongodb

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  # [ALTERNATIVE COMMAND] > kubectl apply --filename *.yaml --namespace=mongodb-namespace
  namespace: mongodb-namespace
spec:
  selector:
    app: mongodb
  ports:
    # [[PROVIDE SERVICE-NAME WITHIN MULTIPLE SERVICES ENTRY-POINT]] >> @see {@link https://www.youtube.com/watch?v=T4Z7visMM4E&t=766s}
    - name: mongodb
      protocol: TCP
      # [Kubernetes Cluster] - Service Port.
      port: 27017
      # [Kubernetes Cluster] - Deployment (Pods) Port.
      targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  # [ALTERNATIVE COMMAND] > kubectl apply --filename *.yaml --namespace=mongodb-namespace
  namespace: mongodb-namespace
  labels:
    app: mongo-express
spec:
  replicas: 1
  # [DISPLAY PODS COMMAND] > kubectl get pod --namespace=mongodb-namespace
  selector:
    matchLabels:
      app: mongo-express
  template:
    # [DISPLAY PODS LOGGER COMMAND] > kubectl logs <POD_NAME> --namespace=mongodb-namespace
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:0.54.0
          ports:
            # @description: Docker Application User Interface Exposed via Default HTTP Port::80
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  # [ALTERNATIVE COMMAND] > kubectl apply --filename *.yaml --namespace=mongodb-namespace
  namespace: mongodb-namespace
spec:
  selector:
    app: mongo-express
  ports:
    # [[PROVIDE SERVICE-NAME WITHIN MULTIPLE SERVICES ENTRY-POINT]] >> @see {@link https://www.youtube.com/watch?v=T4Z7visMM4E&t=766s}
    - name: mongo-express
      protocol: TCP
      # [Kubernetes Cluster] - Service Port.
      port: 27027
      # [Kubernetes Cluster] - Deployment (Pods) Port.
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: mongodb-namespace
  # @description: Ingress Rules: Wildcard & Specific Sub-Domain.
  # @see {@link https://stackoverflow.com/questions/52328483/kubernetes-ingress-rules-how-to-use-wildcard-and-specific-subdomain-together}
  annotations:
    kubernetes.io/tls-acme: "true"
    # @deprecated: Deprecated from Kubernetes v1.22+.
    # @description: Deploying multiple Ingress controllers resulted all controllers simultaneously racing to update Ingress status in confusing ways...
    # @see {@link https://kubernetes.github.io/ingress-nginx/user-guide/multiple-ingress/}
    kubernetes.io/ingress.class: nginx
    # @deprecated: Deprecated {@resources: nginx.ingress.kubernetes.io/add-base-url} from NGINX Ingress Controller.
    # @see {@link https://github.com/kubernetes/ingress-nginx/issues/3770#issuecomment-464449348}
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - mongo-express.e8s.io
      secretName: mongo-express-tls
  rules:
    - host: mongo-express.e8s.io
      http:
        paths:
          # @description: In case ${path} differ from ${rewrite-target}. All the following JS, CSS resources would have not been served correctly.
          # @see {@link https://github.com/kubernetes/ingress-nginx/issues/3770#issuecomment-464449348}
          # @deprecated: [- path: /mongo-express]
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 27027
